--- a/WebSurvey1/WebSurvey1/WebSurvey1.csproj
+++ b/WebSurvey1/WebSurvey1/WebSurvey1.csproj
@@ -45,10 +45,18 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -130,6 +138,56 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Class.cs">
+      <DependentUpon>ModelSurveymssql.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\ClassModels.cs" />
+    <Compile Include="Models\Class_user.cs">
+      <DependentUpon>ModelSurveymssql.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Class_userModels.cs" />
+    <Compile Include="Models\Exam.cs">
+      <DependentUpon>ModelSurveymssql.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\ExamModels.cs" />
+    <Compile Include="Models\ModelSurveymssql.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ModelSurveymssql.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\ModelSurveymssql.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ModelSurveymssql.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\ModelSurveymssql.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ModelSurveymssql.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Question.cs">
+      <DependentUpon>ModelSurveymssql.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\QuestionModels.cs" />
+    <Compile Include="Models\Questions_metaModels.cs" />
+    <Compile Include="Models\Question_meta.cs">
+      <DependentUpon>ModelSurveymssql.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Survey.cs">
+      <DependentUpon>ModelSurveymssql.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\SurveyModels.cs" />
+    <Compile Include="Models\sysdiagram.cs">
+      <DependentUpon>ModelSurveymssql.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\User.cs">
+      <DependentUpon>ModelSurveymssql.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\UserModels.cs" />
+    <Compile Include="Models\user_meta.cs">
+      <DependentUpon>ModelSurveymssql.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\User_metaModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -141,8 +199,25 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Models\ModelSurveymssql.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>ModelSurveymssql.Context.cs</LastGenOutput>
+      <DependentUpon>ModelSurveymssql.edmx</DependentUpon>
+    </Content>
+    <Content Include="Models\ModelSurveymssql.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>ModelSurveymssql.edmx</DependentUpon>
+      <LastGenOutput>ModelSurveymssql.cs</LastGenOutput>
+    </Content>
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <EntityDeploy Include="Models\ModelSurveymssql.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>ModelSurveymssql.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <Content Include="Models\ModelSurveymssql.edmx.diagram">
+      <DependentUpon>ModelSurveymssql.edmx</DependentUpon>
+    </Content>
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
@@ -171,7 +246,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
@@ -185,6 +259,9 @@
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.3.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.3.1.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
